deploy default Cloud Run image!

--- a/fast-devops-terraform/Makefile
+++ b/fast-devops-terraform/Makefile
@@ -2,3 +2,10 @@ all:
 
 dev:
 	ls *.tf | entr -c terraform plan -out=beer.tfplan
+
+update:
+	terraform plan -out=beer.tfplan
+	terraform apply beer.tfplan
+
+updatev:
+	TF_LOG=DEBUG make update
